@@ -1,3 +1,8 @@
+Mon Feb 18 00:06:42 CET 2002 Daniel Veillard <daniel@veillard.com>
+
+	* valid.c SAX.c: fixed #71740 NotationDecl with a required field
+	  missing
+
 Sun Feb 17 23:45:40 CET 2002 Daniel Veillard <daniel@veillard.com>
 
 	* check-xml-test-suite.py: improved the behaviour a bit as
